# esufrn-site

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  TODO.md  dev.docker-compose.yml  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  esufrn_site.sh  help.md  main.docker-compose.yml  pyproject.toml  requirements.txt  sample.env  update.sh
apache2/: apache2.conf
apache2/sites-available/: escoladesaude.conf  planeja.conf  saeufrn.conf
docker/: entrypoint.sh
mysql/: 01-databases.sql  dump.sql
nginx/: Dockerfile  default.conf
nginx/conf/: error_pages.conf
nginx/conf/conf.d/: default.conf
nginx/saeufrn/: apresentacao.html  creditos.html  index.html  operacionalizacao.html  paginainicial.html  processoenf.html
nginx/saeufrn/css/: creditos.css  eticolegais.css  index.css  paginainicial.css  processonenf.css  sae.css
nginx/saeufrn/img/: Thumbs.db
planeja/: Instrução SIGEP.odt  adicionarComponentes.php  carga_ajax.php  comp_ajax.php  componentes.php  cursos.php  docentes.php  docentes_ajax.php  feriados.php  index.php  planejamentos.php  relatorio_docente-ano.php  relatorio_docente-ano2.php  relatorio_docente.php  relatorio_docente2.php  relatorio_estagio.php  relatorio_turma-semestre.php  relatorio_turma-semestre2.php  relatorios.php  turmas.php  turmas_ajax.php
planeja/assets/css/: demo.css  tabs.css  tabstyles.css
planeja/assets/js/: cbpFWTabs.js  custom.js
planeja/classes/: conexao.php  dbdeletar.php  dbeditar.php  dbenviar.php
planeja/css/: modal_adicionarComponentes.css  modal_componentes.css  modal_docentes.css  modal_feriados.css  modal_relatorios.css  modal_turmas.css  style.css  style_adicionarComponentes.css  style_componentes.css  style_cursos.css  style_docentes.css  style_feriados.css  style_planejamentos.css  style_relatorios.css  style_turmas.css
planeja/deletar/: delete_adicionarComponentes.php  delete_componente.php  delete_curso.php  delete_docente.php  delete_feriado.php  delete_planejamento.php  delete_turma.php
planeja/editar/: edita_componente.php  edita_curso.php  edita_docente.php  edita_feriado.php  edita_turma.php
planeja/enviar/: envia_adicionarComponente.php  envia_componente.php  envia_curso.php  envia_docente.php  envia_feriado.php  envia_planejamento.php  envia_turma.php
planeja/js/: modal.js
planeja/nbproject/: project.xml
planeja/nbproject/private/: private.properties  private.xml
planeja/sass/: style.sass
planeja/select/: select_adicionarComponentes.php  select_componente.php  select_curso.php  select_docente.php  select_feriado.php  select_planejamento.php  select_turma.php
saeufrn/: eticolegais.html  sae.html
saeufrn/css/: operacionalizacao.css
scripts/: alter.sql  collectstatic.sh  entrypoint.sh  esufrn_site-dump[202209052029].sql  esufrn_site-dump[202209071613].sql  rundev.sh  runserver.sh  sslgen.sh  start-celery-beat.sh  start-celery-worker.sh  syncdb.sh  syncmedia.sh  upgradeserver.sh
src/: manage.py
src/almoxarifado/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
src/almoxarifado/migrations/: 0001_initial.py  0002_material_qr.py  0003_material_alert_below_history.py
src/api/: pagination.py  permissions.py  urls.py  views.py
src/assets/: admin.py  helpers.py  models.py  serializers.py
src/assets/migrations/: 0001_initial.py
src/chamado/: admin.py  apps.py  models.py  urls.py  views.py
src/chamado/api/: permissions.py  serializers.py  urls.py  views.py  viewsets.py
src/chamado/dashboard/: urls.py  views.py
src/chamado/migrations/: 0001_initial.py  0002_alter_chamado_presence_alter_chamado_shift.py  0002_remove_chamado_lastmodified_chamado_created_and_more.py  0003_alter_chamado_options_remove_chamado_date_and_more.py  0003_remove_chamado_presence_chamado_presenca.py  0004_alter_chamado_status.py  0004_remove_chamado_presenca_chamado_presence.py  0005_chamado_concorda_chamado_date_chamado_presenca_and_more.py  0005_remove_chamado_presence_chamado_presenca.py  0006_alter_chamado_presenca.py  0007_sala_and_chamado_room_fk.py  (+3 more)
src/core/: fields.py  helpers.py  pagination.py  permissions.py  serializers.py  validators.py
src/dashboard/: admin.py  context.py  forms.py  helpers.py  models.py  serializers.py  urls.py  utils.py  views.py
src/esufrn/: celery.py  settings.py  urls.py  wsgi.py
src/eventos/: admin.py  models.py  urls.py  views.py
src/inventario/: admin.py  models.py  serializers.py
src/laboratorio/: admin.py  helpers.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/menu/: admin.py  context.py  models.py  serializers.py
src/principal/: admin.py  apps.py  decorators.py  forms.py  helpers.py  middleware.py  models.py  permissions.py  tasks.py  urls.py  utils.py  views.py
src/registro/: admin.py  forms.py  models.py  views.py
src/reserva/: admin.py  apps.py  enums.py  fields.py  helpers.py  managers.py  models.py  serializers.py  signals.py  urls.py  views.py
src/revistas/: admin.py  apps.py  models.py  urls.py  views.py
src/templates/: 400.html  403.html  404.html  500.html  503.html
(+467 files in other folders)
