[tool.poetry]
name = "es-site2"
version = "0.1.0"
description = ""
authors = ["STI-ESUFRN"]
readme = "README.md"
packages = []

[tool.poetry.scripts]
manage = "manage:main"

[tool.poetry.dependencies]
python = "^3.8"
Django = ">=4.0.6 <4.1.0"
python-dotenv = "^0.20.0"
django-cors-headers = "^3.11.0"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^5.1.0"
django-filter = "^21.1"
psycopg2-binary = "^2.9.3"
Pillow = "^9.1.0"
redgreenunittest = {git = "https://github.com/stevematney/redgreenunittests.git"}
Faker = "^13.3.4"
model-bakery = "^1.5.0"
django-constance = "^2.9.0"
gunicorn = "^20.1.0"
pre-commit = "^2.19.0"
django-model-utils = "^4.2.0"
django-storages = "^1.12.3"
celery = "^5.2.7"
django-redis = "^5.2.0"
boto3 = "^1.23.10"
tblib = "^1.7.0"
djangorestframework-gis = "^1.0"
validate-docbr = "^1.10.0"
ipython = "^8.4.0"
ipdb = "^0.13.9"
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"
python-barcode = "^0.14.0"
django-multiselectfield = "^0.1.12"
django-ckeditor = "^6.5.1"
python-dateutil = "^2.8.2"
django-admin-interface = "^0.20.0"
mysqlclient = "^2.1.1"
django-htmlmin = "^0.11.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pylint = "^2.13.5"
pylint-django = "^2.5.3"
bandit = "^1.7.4"
ipython = "^8.2.0"

[tool.isort]
profile = 'black'

[tool.black]
preview = true
exclude = "migrations"

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.master]
load-plugins=["pylint_django"]
django-settings-module = ["esufrn.settings"]
ignore = ["*/migrations/*", "manage.py"]
disable = ["C0114", "C0115", "C0116", "broad-except"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "esufrn.settings"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
