[tool.poetry]
name = "es-site2"
version = "0.1.0"
description = ""
authors = ["STI-ESUFRN"]
readme = "README.md"
packages = []

[tool.poetry.scripts]
manage = "manage:main"

[tool.poetry.dependencies]
python = "^3.8"
Django = ">=4.0.6 <4.1.0"
django-cors-headers = "^3.11.0"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^5.1.0"
django-filter = "^21.1"
django-constance = "^2.9.0"
django-model-utils = "^4.2.0"
django-multiselectfield = "^0.1.12"
django-ckeditor = "^6.5.1"
python-dateutil = "^2.8.2"
django-admin-interface = "^0.20.0"
django-htmlmin = "^0.11.0"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.0"
gevent = "^22.10.2"
redis = "^4.4.0"
qrcode = "^7.3.1"
django-mathfilters = "^1.0.0"
drf-nested-routers = "^0.93.4"
psycopg2-binary = "^2.9.5"
django-redis = "^5.2.0"
celery = "^5.2.7"
pytest-django = "^4.5.2"
redgreenunittest = { git = "https://github.com/stevematney/redgreenunittests.git" }

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
djlint = "^1.19.2"
model-bakery = "^1.5.0"
pre-commit = "^2.20.0"
ruff = "^0.0.257"
ipython = "^8.11.0"

[tool.black]
preview = true
exclude = "migrations"

[tool.ruff]
src = ["src"]

exclude = ["*/migrations/*", "manage.py"]

select = [
    "F",
    "I",
    "N",
    "YTT",
    "S",
    "B",
    "COM",
    "C4",
    "DTZ",
    "DJ",
    "EM",
    "EXE",
    "ISC",
    "ICN",
    "G",
    "T20",
    "PYI",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "PL",
]

ignore = ["DJ001", "S107", "S106", "E501"]
target-version = "py311"                   # Python Version

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "esufrn.settings"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
